Sync 1.19.4 some settings